# peano-extras

./: peano-extras.cabal  stack.yaml
src/Data/Peano/: Extras.hs
