name:           peano-extras
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         eric
synopsis:       Minor GHC-only supplements to "Data.Peano".

library
  hs-source-dirs:  src
  build-depends:
                   base >=4,
                   Peano -any
  ghc-options:     -Wall
  extensions:
  exposed-modules:
                   Data.Peano.Extras
